data/derived/comb/progs/unify/prog2387.ml.out
Characters 58-63:
  let _ = pipe [(fun x -> x + 3);(fun x-> x + x); (fun y -> x = 2); fun x -> x + 1] 3;;
                                                            ^^^^^
Error: This expression has type bool but an expression was expected of type
         int
